# ZAEBAL

./: README.md  pyproject.toml
zaebal/: __init__.py  bard.py  config.py
zaebal/base_classes/: base_bard.py
zaebal/base_models/: base_bard.py
zaebal/basemodels/: base_client.py
zaebal/models/: __init__.py  bard_answer.py  bard_error.py
